@@ -7,8 +7,8 @@ public class AObject {
 	public static void main(String[] s) {
 		final Object[] os = new Object[5];
 		os[0] = new Object();
-		os[1] = "stringa";
-		os[2] = new Integer(10);
+		os[1] = "string";
+		os[2] = Integer.valueOf(10);
 		os[3] = new int[] { 10, 20, 30 };
 		os[4] = new java.util.Date();
 		printAll(os);
@@ -19,7 +19,7 @@ public class AObject {
 	
 	public static void printAll(final Object[] array) {
 		for (final Object o : array) {
-			System.out.println("Oggetto:" + o.toString());
+			System.out.println("Object:" + o.toString());
 		}
 	}
 }
